k8s/hello-pks.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-pks
spec:
  selector:
    app: hello-pks
  ports:
  - protocol: TCP
    port: 8080
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-pks
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-pks
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: /actuator/prometheus
    spec:
      containers:
      - name: hello-pks
        image: making/hello-pks:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 1
        resources:
          limits:
            memory: "174Mi"
          # requests:
          #   memory: "174Mi"
