k8s/hello-tkg.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-tkg
  namespace: default
spec:
  selector:
    app: hello-tkg
  ports:
  - protocol: TCP
    port: 8080
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-tkg
  namespace: default
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-tkg
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: /actuator/prometheus
    spec:
      containers:
      - name: hello-tkg
        image: making/hello-tkg
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/info
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 1
        resources:
          limits:
            memory: "512Mi"
          requests:
            memory: "512Mi"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
  name: hello-tkg
  namespace: default
spec:
  rules:
  - host: hello-tkg.dev.pkhamdee.com
    http:
      paths:
      - backend:
          serviceName: hello-tkg
          servicePort: 8080
  tls:
  - hosts:
    - hello-tkg.dev.pkhamdee.com
